# alyssa_group_task

task3.7/yolox_result/YOLOX_outputs/yolox_voc_s/tensorboard/: events.out.tfevents.1666512183.RobotLabRadar.19683.0
task3.7/yolox_result/cpp/: CMakeLists.txt
任务3.7/yolox_result/YOLOX_outputs/yolox_voc_s/: train_log.txt
任务3.7/yolox_result/YOLOX_outputs/yolox_voc_s/tensorboard/: events.out.tfevents.1666512276.RobotLabRadar.19849.0
任务3.7/yolox_result/cpp/: yolox.cpp
